# hamming_code

./: README.md  pyproject.toml  test.py
hamming_code/: __init__.py  hamming_code.py
src/hamming_code/: __init__.py  hamming_code.py
